// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExchangePriceFix 1`] = `
Object {
  "base": "USD",
  "price": 634.7,
  "quote": "ETH",
  "source": "",
  "timestamp": 1524453966393,
  "volume": 0.4,
}
`;

exports[`getExchangePriceFix 2`] = `
Object {
  "base": "USD",
  "price": 637,
  "quote": "ETH",
  "source": "",
  "timestamp": 1524465953111,
  "volume": 6.002117,
}
`;

exports[`getExchangePriceFix 3`] = `
Object {
  "base": "USD",
  "price": 667,
  "quote": "ETH",
  "source": "",
  "timestamp": 1524547898561,
  "volume": 0.024,
}
`;

exports[`getExchangePriceFix 4`] = `
Object {
  "base": "USD",
  "price": 633,
  "quote": "ETH",
  "source": "",
  "timestamp": 1524463065507,
  "volume": 8.67,
}
`;

exports[`getPriceFix case 1 1`] = `
Object {
  "base": "USD",
  "price": 666.98,
  "quote": "ETH",
  "source": "",
  "timestamp": 1524547909941,
  "volume": 0.16599999999999998,
}
`;

exports[`getPriceFix case 2 1`] = `
Object {
  "base": "USD",
  "price": 638.5705,
  "quote": "ETH",
  "source": "",
  "timestamp": 1524547909941,
  "volume": 35.73263379,
}
`;

exports[`getVolumeMedianPrice 1`] = `
Object {
  "base": "USD",
  "price": 634.69,
  "quote": "ETH",
  "source": "",
  "timestamp": 1234567890,
  "volume": 3.15308079,
}
`;

exports[`getVolumeMedianPrice 2`] = `
Object {
  "base": "USD",
  "price": 638,
  "quote": "ETH",
  "source": "",
  "timestamp": 1234567890,
  "volume": 22.681753,
}
`;

exports[`getVolumeMedianPrice 3`] = `
Object {
  "base": "USD",
  "price": 666.98,
  "quote": "ETH",
  "source": "",
  "timestamp": 1234567890,
  "volume": 0.16599999999999998,
}
`;

exports[`getVolumeMedianPrice 4`] = `
Object {
  "base": "USD",
  "price": 633,
  "quote": "ETH",
  "source": "",
  "timestamp": 1234567890,
  "volume": 12.835600000000001,
}
`;

exports[`modifyWeights 1`] = `
Array [
  0.35,
  0.3,
  0.17500000000000004,
  0.17500000000000004,
]
`;

exports[`modifyWeights 2`] = `
Array [
  0.55,
  0.29999999999999993,
  0.14999999999999997,
]
`;

exports[`modifyWeights 3`] = `
Array [
  0.65,
  0.35,
]
`;
